# Test

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  WORKSPACE  injected.txt
bazel_ros2_rules/ros2/resources/ros2bzl/: templates.py
bazel_ros2_rules/ros2/resources/ros2bzl/scraping/: metadata.py
data/: dataset
outputs/: model_test_method1.pth
python/: CGNet.py  auto_comment.py  conv2d_test.py  np_array(matrix_manipulation).py
python/test/: bp_nn_test.py  dataloader_test.py  dataset_test.py  datasets_test.py  max_pool_test.py  model_pretrain_test.py  model_save_and_load_test.py  nn_linear_test.py  nn_loss_test.py  nn_optim_test.py  nn_relu_test.py  nn_sequential_test.py  tensor_board_test.py  test.py  torch_nn_test.py  torch_test.py  train_test.py  transforms_test.py
scripts/: CMakeLists.txt  arm64v8_run_docker.sh  arm64v8_set_env.sh  bashrc  bashrc_arm64v8  bashrc_ubuntu24  bashrc_vnc  build_and_install.sh  deploy.sh  generate_vedio.py  gpt_api_test.py  np_array(matrix_manipulation).py  run_docker copy.sh  run_docker.sh  run_docker_ubuntu24.sh  set_env.sh  test.py  vnc_run_docker.sh
src/: BUILD  CMakeLists.txt  main.cc  main.cpp  traditional_algorithm.cpp  urdf_reader_test.cc
src/algorithm/: lqr.py  test.py
src/include/: BUILD  Singleton.h  control.cc  control.h
src/kinematics/: CMakeLists.txt  forward_kinematics.cc  forward_kinematics.h  my_math.h  twist.cc  twist.h
src/ros2/: SimPublisher.cc  SimPublisher.h  ros2.cc
src/test/: BUILD  CMakeLists.txt  eigen_test.cc  glog_test.cc  hello-world.cc  hello_world.cc  joystick.cc  joystick.h  key_dection_test.cc  my_math_test.cc  qpOASES_test.cc  singleton.cc  singleton.h  singleton_test.cc  test.cc  thread_test.cc
src/toolchain/: BUILD
third_parties/: BUILD  CMakeLists.txt
third_parties/Eigen3/: CMakeLists.txt
third_parties/Eigen3/share/eigen3/cmake/: Eigen3Config.cmake  Eigen3ConfigVersion.cmake
third_parties/Eigen3/share/pkgconfig/: eigen3.pc
third_parties/glog/: CMakeLists.txt
third_parties/glog/lib/: libglog.so.0.7.1
third_parties/glog/lib/cmake/glog/: glog-targets-release.cmake  glog-targets.cmake
third_parties/mujoco/: .bazelrc
third_parties/rbdl/include/rbdl/: rbdl_config.h
third_parties/rbdl/lib/: librbdl_urdfreader.so.3.3.1
third_parties/rbdl/lib/pkgconfig/: rbdl.pc
