# set(FILE ${CMAKE_CURRENT_SOURCE_DIR}/bashrc
# ${CMAKE_CURRENT_SOURCE_DIR}/run_docker.sh
# ${CMAKE_CURRENT_SOURCE_DIR}/bashrc_arm64v8
# ${CMAKE_CURRENT_SOURCE_DIR}/arm64v8_run_docker.sh)

# install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION .)

install(PROGRAMS set_env.sh DESTINATION scripts)
